# clario

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  install.sh  uninstall.sh
.github/workflows/: check.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-tui-refactor-architecture-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-security-process-monitor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-security-vulnerability-audit/: 03-01-PLAN.md  03-02-PLAN.md  03-RESEARCH.md
.planning/phases/04-linux-compatibility/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
src/: app.rs  cli.rs  main.rs
src/cli/: clean.rs  mod.rs  update.rs
src/core/: app_scanner.rs  dev_scanner.rs  events.rs  file_ops.rs  file_scanner.rs  mod.rs  process_scanner.rs  updater.rs
src/handlers/: app_uninstaller.rs  dashboard.rs  file_manager.rs  mod.rs  process_monitor.rs  settings.rs  update.rs
src/models/: app_info.rs  config.rs  file_info.rs  mod.rs  process_info.rs
src/ui/: app_uninstaller.rs  components.rs  dashboard.rs  file_manager.rs  mod.rs  process_monitor.rs  settings.rs  update.rs
src/utils/: mod.rs  paths.rs  platform.rs  size.rs
