[package]
name = "clario"
version = "0.1.0"
edition = "2021"
authors = ["Ismail Nur Alam <ismailnuralam@gmail.com>"]
description = "System cleaning utility with TUI interface"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-std",
  "time",
] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"

# Serialization formats
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
sysinfo = "0.38.2"
zip = "8.1.0"
serde_json = "1.0.149"
plist = "1.8.0"

[dev-dependencies]
tokio-test = "0.4.5"
